<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.4</version>
		<relativePath/>
	</parent>

	<groupId>com.wanderfun</groupId>
	<artifactId>root</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

    <name>wanderfun</name>
	<description>Tourism Guide with interactive map</description>

	<properties>
		<java.version>21</java.version>
		<spring.boot.version>3.4.4</spring.boot.version>
		<project.version>0.0.1-SNAPSHOT</project.version>
	</properties>

	<modules>
		<module>domain-layer</module>
		<module>application-layer</module>
		<module>presentation-layer</module>
		<module>infrastructure-layer</module>
	</modules>

</project>
